--- a/ask.html
+++ b/ask.html
@@ -68,7 +68,7 @@
   <div class="kawaii-container">
     <h1 class="kawaii-title">rawrrr so you are legal now huh?😏😏🥵💦</h1>
     <div class="button-container" id="buttons">
-      <button class="kawaii-btn" id="yesBtn">Yes 🎀</button>
+      <button class="kawaii-btn" id="yesBtn">Yes mommy🎀</button>
       <button class="kawaii-btn" id="noBtn">No ❌</button>
     </div>
   </div>
@@ -88,3 +88,4 @@
   </script>
 </body>
 </html>
+
